# object-cloud-drive

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1713538055778.mjs
client/: README.md  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  tsconfig.json  vite.config.ts
client/lib/: main.dart
client/src/: App.css  App.tsx  App.vue  main.ts  main.tsx
client/src-tauri/: Cargo.toml
new_client/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
new_client/src/: App.vue  index.less  main.ts
old_client/: README.md  bug.md  pnpm-lock.yaml
old_client/public/: index.html
old_client/src/: main.js
resources/: ObjectDisk.sql  objcloud.sql
serve/: README.md  ormconfig.json  package.json  pnpm-lock.yaml
serve/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
serve_rust/: Cargo.toml  objcloud.db3  objcloud.db3-shm  objcloud.db3-wal
serve_rust/src/: banner.txt  config.rs  crypto.rs  handlers.rs  main.rs  models.rs  sqltool.rs
server/: README.md  pubspec.yaml
server/assets/: objcloud.sql
server/lib/: p2pserver.dart  sql.dart
server/linux/: CMakeLists.txt
server/test/: p2pserver_test.dart
server/windows/: CMakeLists.txt
src/: App.tsx  main.tsx  style.css  style.less
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/locales/: zh.ts
src/themes/: dark.ts  light.ts
viteClient/: README.md  package.json  pnpm-lock.yaml  tsconfig copy.json  tsconfig.json  vite.config.ts
viteClient/src/: App.vue  main.ts  style.css  vue-config-ts
(+216 files in other folders)
